added getPosts and getPost

--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "dependencies": {
     "express": "^4.19.2",
     "mongoose": "^8.5.3"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0"
   }
 }
