--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "start:dev": "node --env-file=.env --watch server.js"
+    "start:dev": "node --env-file=.env --watch server.js",
+    "create-admin": "node --env-file=.env createAdmin.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "express": "^4.19.2",
     "express-validator": "^7.2.0",
     "helmet": "^7.1.0",
+    "inquirer": "^10.2.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
     "nodemailer": "^6.9.14"
