--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "inquirer": "^10.2.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.9.14"
-  },
-  "devDependencies": {
-    "morgan": "^1.10.0"
   }
 }
